@@ -1,3 +1,9 @@
+2006-12-12        svu
+
+	* sql/TableObjectType.java, sql/SqlSubVFS.java: added ability to have
+	complex object action hierarchies. Started implementing "Schema"
+	object action, for tables (to be extended for views)
+
 2006-12-02        svu
 
 	* sql/SqlServerChanged.java, sql/ResultSetWindowPopup.java,
